# pyCuSFM

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .style.yapf  CONTRIBUTING.md  LICENSE  README.md  install_in_host.sh  mkdocs.yml  pyproject.toml  run_in_docker.sh  setup.bash
.github/workflows/: deploy-docs.yml
data/kitti/: get_framemeta_file_for_KITTI.py
data/kitti/config/: keypoint_creation_config.pb.txt  localizer_config.pb.txt  match_pair_select_config.pb.txt  matching_config.pb.txt  matching_task_worker_config.pb.txt  pose_graph_config.pb.txt  vision_mapping_config.pb.txt
data/r2b_galileo/: expected_poses.txt  frames_meta.json
docker/: DockerFile.dev  DockerFile.dev_cuda12  DockerFile.dev_cuda13  Dockerfile.wheel
docs/: README_auxiliary_tools.md  camera.md  index.md  tutorial.md
docs/javascripts/: mathjax.js
pycusfm/: __init__.py  bazel_command_runner.py  binary_runner.py  command_runner.py  constants.py  cusfm_cli.py  cusfm_runner.py  cuvslam_cli.py  cuvslam_runner.py  generate_frame_meta.py  runfiles_helper.py  split_repeated_poses.py
pycusfm/configs/av/: association_config.pb.txt  keypoint_creation_config.pb.txt  match_pair_select_config.pb.txt  matching_config.pb.txt  matching_task_worker_config.pb.txt  pose_graph_config.pb.txt  query_map_config.pb.txt  vision_mapping_config.pb.txt  vo_pose_optimize_ba_config.pb.txt
pycusfm/configs/isaac/: matching_config.pb.txt  matching_task_worker_config.pb.txt  pose_graph_config.pb.txt  vision_mapping_config.pb.txt  vo_pose_optimize_ba_config.pb.txt
pycusfm/lib/: libcvcuda.so.0  libnvcv_types.so.0
(+63 files in other folders)
